app: added space around the bottom of each page to avoid having the demo version overlap important content

--- a/app/resources/assets/sass/app.scss
+++ b/app/resources/assets/sass/app.scss
@@ -105,7 +105,7 @@ h1, h2, h3 {
 	}
 	
 	.data {
-		max-height: calc(100vh - 135px);
+		max-height: calc(100vh - 152px);
 		overflow-y: auto;
 		overflow-x: hidden;
 		
@@ -260,6 +260,8 @@ footer {
 
 .profile {
 	@extend %page-base;
+	
+	padding-bottom: 30px;
 	
 	h1 {
 		padding-bottom: 20px;
@@ -855,7 +857,7 @@ body.fixed-menu {
 		}		
 	}
 	
-	.location-tags {	
+	.location-tags {
 		.location-tag {
 			@extend %dark-link;
 		
@@ -1017,6 +1019,7 @@ body.fixed-menu {
 		padding-right: 15px;
 		padding-left: 15px;
 		margin-top: 40px;
+		margin-bottom: 40px;
 		
 		.location-tag {
 			padding-left: 0;
